# workshop-docker

./: README.md  app.py  build-log2.txt  dockerfile  pyproject.toml
src/: app.py
