[tool.poetry]
name = "dockerjornada"
version = "0.1.0"
description = "Projeto para gerenciar containers Docker com Python"
authors = ["Sergio Semprebom <sergiosemprebom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "*"
pandas = "^1.3.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



